--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 14px;
 }
 
